    * `_coerce_validate_strategy` (invoked by `get_metadatas`) will now raise a
        ValueError if a string other than "all" is submitted.  The only valid
        string is "all", otherwise a list of string - excluding "all" - must be
        submitted. Warnings of this have been emitted for several years.
    * __init__(`search_head_only`) now defaults to False

0.12.3
    * pin "BeautifulSoup4<4.15.0"
        * See `https://git.launchpad.net/beautifulsoup/tree/CHANGELOG`
        > 4.13.0 (20250202)
        > These things now give DeprecationWarnings when you try to use them,
and are scheduled to be removed in Beautiful Soup 4.15.0.
        * fixes #47

0.12.2
    * Support Python 3.13 via `legacy-cgi` package.
      Thank you, https://github.com/Dryusdan.
      See:
        https://github.com/jvanasco/metadata_parser/pull/44
        https://github.com/jvanasco/metadata_parser/issues/43
    * updated pre-commit-config 

0.12.1
    * typing
    * added `METADATA_PARSER_FUTURE` environment variable
        `export METADATA_PARSER_FUTURE=1` to enable
    * is_parsed_valid_url can accept a ParseResultBytes object now

0.12.0
    * drop python 2.7
    * initial typing support

0.11.0 | UNRELEASED

  * BREAKING CHANGES
    Due to the following breaking changes, the version was bumped to 0.11.0
    * `MetadataParser.fetch_url` now returns a third item.
      
  * COMPATIBLE CHANGES
    The following changes are backwards compatible to the 0.10.x releases
    * a test-suite for an application leveraging `metadata_parser` experienced
      some issues due to changes in the Responses package used to mock tests.
      to better faciliate against that, a new change were made:

      MetadataParser now has 2 subclassable attributes for items that should
      or should not be parsed:

        +    _content_types_parse = ("text/html",)
        +    _content_types_noparse = ("application/json",)

      Previously, these values were hardcoded into the logic.     